# Qortex

./: .env  .gitignore  Cargo.toml  README.md
bot/: Cargo.toml
bot/src/: error.rs  lib.rs  main.rs  mistral.rs  state.rs  types.rs
bot/src/handlers/: commands.rs  messages.rs  mod.rs
bot/src/handlers/callback/: faq.rs  mod.rs  requests.rs
bot/src/handlers/file_manager/: mod.rs
bot/src/keyboards/: faqkb.rs  menu.rs  mod.rs  requests.rs
db/: Cargo.toml
db/src/: lib.rs
db/src/collections/: answer.rs  history.rs  mod.rs  user.rs
db_pg/: Cargo.toml
db_pg/src/: lib.rs
grpc_service/: Cargo.toml  build.rs
grpc_service/proto/: ai_service.proto  helloworld.proto  prompt_service.proto  test.proto
grpc_service/src/: certs.rs  client.rs  lib.rs  server.rs
localization/: Cargo.toml
localization/src/: lib.rs
logging/: Cargo.toml
logging/src/: config.rs  lib.rs  logger.rs
monitor/: Cargo.toml
monitor/src/: lib.rs
qortex/: Cargo.toml
qortex/src/: main.rs
