[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "main_app"
path = "src/main.rs"

[dependencies]
monitor = { path = "../monitor"}
logging = { path = "../logging" }
grpc_service = { path = "../grpc_service" }

teloxide = { version = "0.15.0", features = ["macros", "throttle"] }
tokio = {version = "1", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tonic = { version = "0.13.1", features = ["transport", "tls-native-roots"]}
dotenvy = "0.15"
chrono = {version = "0.4", features = ["serde"]}
rustls = { version = "0.23.27", features = ["ring"] }
