[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[lib]
name = "bot"
path = "src/lib.rs"

[dependencies]
logging = { path = "../logging" }
grpc_service = { path = "../grpc_service" }
db_pg = { path = "../db_pg"}

teloxide = { version = "0.15.0", features = ["macros", "throttle"] }
tokio = {version = "1", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tonic = { version = "0.13.1", features = ["transport", "tls-native-roots"]}
dotenvy = "0.15"
chrono = {version = "0.4", features = ["serde"]}
rustls = { version = "0.23.27", features = ["ring"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.17.0"
async-trait = "0.1"
sqlx = { version = "0.8", features = [ "runtime-tokio", "uuid", "postgres", "derive", "chrono" ] }