[package]
name = "db"
version = "0.1.0"
edition = "2024"

[lib]
name = "db"
path = "src/lib.rs"

[dependencies]
mongodb = "3.2.3"
chrono = { version = "0.4", features=["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
futures = "0.3.28"
tokio = { version = "1", features = ["full"] }
anyhow = "1"