[package]
name = "grpc_service"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "grpc_service"
path = "src/lib.rs"

[dependencies]
prost = "0.13.5"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.13.1"
futures = "0.3"

[build-dependencies]
tonic-build = "*"