[package]
name = "logging"
version = "0.1.0"
edition = "2024"

[lib]
name = "logging"
path = "src/lib.rs"

[dependencies]
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
dotenvy = "0.15"
anyhow = "1.0"
once_cell = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"